--- a/Source/RWD Task/input/input.html
+++ b/Source/RWD Task/input/input.html
@@ -35,7 +35,7 @@ TODO:
 </div>
 <div class="row" style="margin-bottom: 2%">
 <div class="col-lg-12 col-sm-12 col-md-12">
-    <img class="img-responsive" src="PlaceHolderImages/apple.png" width="90%"; height="50%">
+    <img class="img-responsive" src="PlaceHolderImages/Image.png" width="90%"; height="50%">
 	</div>
 </div>
 <div class="row" style="margin-bottom: 2%">
@@ -43,19 +43,19 @@ TODO:
 </div>
 <div class="row" style="margin-bottom: 2%">
     <div class="col-lg-4 col-md-4 col-sm-4">
-        <img class="img-responsive" alt="PlaceHolderImage3" src="PlaceHolderImages/iphone.png"  width="50%"; height="40%">
-        <h3 style="text-align: center">IPHONE</h3>
-        <p style="text-align: center"><a href="https://www.apple.com/iphone/">Link for specifications</a></p>
+        <img class="img-responsive" alt="PlaceHolderImage3" src="PlaceHolderImages/app1.png">
+        <h3 style="text-align: center">ICP-1</h3>
+        <p style="text-align: center"><a href="https://github.com/sykhb/ICP1/wiki">Link for ICP-1</a></p>
     </div>
     <div class="col-lg-4 col-md-4 col-sm-4">
-        <img class="img-responsive" alt="PlaceHolderImage3" src="PlaceHolderImages/ipad.jpg"  width="80%"; height="40%">
-        <h3 style="text-align: center">IPAD</h3>
-        <p style="text-align: center"><a href="https://www.apple.com/ipad/">Link for specifications</a></p>
+        <img class="img-responsive" alt="PlaceHolderImage3" src="PlaceHolderImages/app2.png"  width="80%"; height="40%">
+        <h3 style="text-align: center">ICP-2</h3>
+        <p style="text-align: center"><a href="https://github.com/sykhb/ICP2/wiki">Link for ICP-2</a></p>
     </div>
 	<div class="col-lg-4 col-md-4 col-sm-4">
-        <img class="img-responsive" alt="PlaceHolderImage3" src="PlaceHolderImages/watch.jpg"  width="80%"; height="60%">
-        <h3 style="text-align: center">APPLE WATCH</h3>
-        <p style="text-align: center"><a href="https://www.apple.com/watch/">Link for specifications</a></p>
+        <img class="img-responsive" alt="PlaceHolderImage3" src="PlaceHolderImages/app3.png"  width="80%"; height="60%">
+        <h3 style="text-align: center">ICP-3</h3>
+        <p style="text-align: center"><a href="https://github.com/sykhb/ICP3/wiki">Link for ICP-3</a></p>
     </div>
 </div>
 <!--<div>
